Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36486

Qt Location maps tile cache crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.3.0
    • 5.2.0
    • None
    • Linux

    Description

      This was reported on the devel@lists.sailfishos.org mailing list (https://lists.sailfishos.org/pipermail/devel/2014-January/003099.html).

      There is a crash in Qt Locations tile cache during map destruction.

      For the first, I have a back button on a Map. If I start a flick and I press the back button while the Map is still flicking, it crashes. But it also crashes sometimes when the flick has finished so I can't simply test that flick is finished before doing the pagestack.pop():

      Program received signal SIGSEGV, Segmentation fault.
      QString::lastIndexOf (this=0x4, ch=..., from=-1, cs=Qt::CaseSensitive) at tools/qstring.cpp:2727
      2727 tools/qstring.cpp: No such file or directory.
      (gdb) backtrace
      #0 QString::lastIndexOf (this=0x4, ch=..., from=-1, cs=Qt::CaseSensitive) at tools/qstring.cpp:2727
      #1 0x40089bf0 in QGeoTileCache::~QGeoTileCache (this=0x400a750c, __in_chrg=<optimized out>) at maps/qgeotilecache.cpp:202
      #2 0x4008a06c in QGeoTileCache::~QGeoTileCache (this=0x2ad71fd0, __in_chrg=<optimized out>) at maps/qgeotilecache.cpp:208
      #3 0x4007ad98 in QGeoTiledMappingManagerEnginePrivate::~QGeoTiledMappingManagerEnginePrivate (this=0x2a2b6b10, __in_chrg=<optimized out>)
      at maps/qgeotiledmappingmanagerengine.cpp:328
      #4 0x4007aefc in QGeoTiledMappingManagerEngine::~QGeoTiledMappingManagerEngine (this=0x2a4d5a68, __in_chrg=<optimized out>) at maps/qgeotiledmappingmanagerengine.cpp:68
      #5 0x47ca43b0 in QGeoTiledMappingManagerEngineNokia::~QGeoTiledMappingManagerEngineNokia (this=0x2a4d5a68, __in_chrg=<optimized out>)
      at qgeotiledmappingmanagerengine_nokia.cpp:139
      #6 0x47ca43fc in QGeoTiledMappingManagerEngineNokia::~QGeoTiledMappingManagerEngineNokia (this=0x2a4d5a68, __in_chrg=<optimized out>)
      at qgeotiledmappingmanagerengine_nokia.cpp:139
      #7 0x4007a210 in ~QGeoMappingManagerPrivate (this=0x2a84d6c0, __in_chrg=<optimized out>) at maps/qgeomappingmanager.cpp:190
      #8 QGeoMappingManager::~QGeoMappingManager (this=0x2a51a010, __in_chrg=<optimized out>) at maps/qgeomappingmanager.cpp:96
      #9 0x4007a244 in QGeoMappingManager::~QGeoMappingManager (this=0x2a51a010, __in_chrg=<optimized out>) at maps/qgeomappingmanager.cpp:97

      Attachments

        For Gerrit Dashboard: QTBUG-36486
        # Subject Branch Project Status CR V

        Activity

          People

            amccarthy Aaron McCarthy
            amccarthy Aaron McCarthy
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes