Attempt to crash in tile cache.

The tile cache can sometimes end up with null pointers which causes a
crash when saving the state of the cache queues to disk. Fixed by
skipping over these entries.

Task-number: QTBUG-36486
Change-Id: Ifa359bd1f9dbe37da0d5b208a7c4ee7a26f8bd44
Reviewed-by: Alex Blasche <alexander.blasche@digia.com>